--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 <button id="show-more-button">тағы да..</button>
 <script src="script.js"></script>
 
+<script>
+    alert("example for new branch")
+</script>
+
 </body>
 </html>
 
