console.log zhazyldy

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 <script src="script.js"></script>
 
 <script>
-    alert("test code")
+    alert("test code");
 </script>
-
+<script>
+    console.log("Ozgerissiz soz");
+</script>
 </body>
 </html>
 
